fix some SSL cert errors

--- a/templates/authentication/auth_choice.html
+++ b/templates/authentication/auth_choice.html
@@ -463,6 +463,9 @@
     </style>
 </head>
 <body>
+    <!-- CSRF Token -->
+    {% csrf_token %}
+    
     <!-- Enhanced Background -->
     <div class="background-wrapper">
         <div class="background-grid"></div>
